<resources>
    <string name="app_name">GamesVideosProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="release_year">release_year</string>
    <string name="genre">genre</string>
    <string name="rating">rating</string>
    <string name="all">all</string>
    <string name="appgame">appgame</string>
    <string name="game_title">game_title</string>
    <string name="release_date">release_date</string>
    <string name="playnation">PlayNation</string>
    <string name="dess">dess</string>
    <string name="explore_games">Explore Games</string>
</resources>