<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".fragments.GamesList">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="425dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:background="@drawable/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/searchView"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/showFilterButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sasa"
            android:textColor="#DC0000"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/appgame"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/filterTapp1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:queryHint="Search" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/filterTapp1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/r_view"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/all"
            android:id="@+id/allFilter"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ratingFilter"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintTop_toTopOf="@id/genreFilter"/>

        <Button
            android:id="@+id/ratingFilter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/rating"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@id/allFilter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/releaseYearFilter"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/genre"
            android:id="@+id/genreFilter"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/releaseYearFilter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/allFilter"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/release_year"
            android:id="@+id/releaseYearFilter"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@id/genreFilter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingFilter"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/r_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTapp1" />



</androidx.constraintlayout.widget.ConstraintLayout>